import and panels